include $(top_srcdir)/am/guile.mk

SOURCES =
SOURCES += home/dir.scm
SOURCES += home/doc-here.scm
SOURCES += home/file.scm
SOURCES += home/generics.scm
SOURCES += home/git.scm
SOURCES += home/init.scm
SOURCES += home/modules.scm
SOURCES += home/path.scm

CLEANFILES = $(GOBJECTS)

ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
